packages/svelte/tests/compiler-errors/samples/export-default-state-indirect/main.svelte.js
let primitive = $state('nope');

export function update_primitive() {
	primitive = 'yep';
}

export default primitive;
